charts/webapp/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapp
  namespace: deployment
spec:
  gateways:
  - webapp-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /buy
    - uri:
        exact: /healthcheck
    route:
    - destination:
        host: deployment-webapp-webapp
        port:
          number: 5001
